tests/compile_fail/resolver_duplicate_definition.stderr
error: Identifier "meters" defined multiple times.
  --> tests/compile_fail/resolver_duplicate_definition.rs:11:15
   |
11 |         unit (meters, "m") = Length,
   |               ^^^^^^
12 |         unit (meters, "m") = Length,
   |               ^^^^^^
